--- a/PragueParking.Test/PragueParking.Test.csproj
+++ b/PragueParking.Test/PragueParking.Test.csproj
@@ -8,12 +8,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0">
+      <TreatAsUsed>true</TreatAsUsed>
+    </PackageReference>
     <PackageReference Include="MSTest" Version="3.6.4" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\PragueParking.Core\PragueParking.Core.csproj" />
+    <ProjectReference Include="..\PragueParking.Core\PragueParking.Core.csproj" />
+    <ProjectReference Include="..\PragueParking.DataAccess\PragueParking.DataAccess.csproj" />
   </ItemGroup>
 
   <ItemGroup>
